syntax = "proto3";

package bookstore;

message CreditCard {
    string number = 1;
    string expirationDate = 2;
    string cvv = 3;
}

message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip = 4;
    string country = 5;
}

message UserData {
    string name = 1;
    string contact = 2;
    Address address = 3;
}
